--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 asgiref==3.6.0
 Django==4.1.5
+django-admin-list-filter-dropdown==1.0.3
+django-admin-rangefilter==0.9.0
 Faker==16.6.0
+Pillow==9.4.0
 python-dateutil==2.8.2
 python-decouple==3.7
 six==1.16.0
